--- a/front/pages/gm/auto-hefu-server-edit.html
+++ b/front/pages/gm/auto-hefu-server-edit.html
@@ -27,9 +27,16 @@
 		    </div>
 
 				<div class="layui-form-item">
+					<label class="layui-form-label">合服展示时间</label>
+					<div class="layui-input-block">
+            <input type="text" class="layui-input" lay-verify="required|datetime" lay-verType="tips" placeholder="合服展示日期" autocomplete="off" id="sPrepareTime" name="sPrepareTime">
+					</div>
+				</div>
+
+				<div class="layui-form-item">
 					<label class="layui-form-label">合服时间</label>
 					<div class="layui-input-block">
-            <input type="text" class="layui-input" lay-verify="required|datetime" lay-verType="tips" placeholder="合服日期" autocomplete="off" id="sHefuTime" name="sHefuTime">
+            <input type="text" class="layui-input" lay-verify="required|datetime" lay-verType="tips" placeholder="合服开始日期" autocomplete="off" id="sHefuTime" name="sHefuTime">
 					</div>
 				</div>
 
@@ -48,11 +55,13 @@
       let okLayer = layui.okLayer;
       let $ = layui.jquery;
 
+      laydate.render({ elem: "#sPrepareTime", type: "datetime" });
       laydate.render({ elem: "#sHefuTime", type: "datetime" });
 
       $("input[name='iId']").val(parent.zonedata.iId);
       $("input[name='sSrcZoneIds']").val(parent.zonedata.sSrcZoneIds);
       $("input[name='iToZoneId']").val(parent.zonedata.iMergeToZoneId);
+      $("input[name='sPrepareTime']").val(parent.zonedata.sPrepareTime);
       $("input[name='sHefuTime']").val(parent.zonedata.sHefuTime);
 
       //监听提交
