--- a/front/pages/gm/auto-hefu-server.html
+++ b/front/pages/gm/auto-hefu-server.html
@@ -55,6 +55,7 @@
                 case 0: ret = '未开始'; break;
                 case 1: ret = '成功'; break;
                 case 2: ret = '<span class="layui-btn layui-btn-danger layui-btn-xs">失败</span>'; break;
+                case 3: ret = '正在展示中'; break;
                 default:
                   ret = '未知状态';
               }
@@ -62,6 +63,7 @@
             }
           },
           { field: "sCreateTime", title: "添加时间", width: 150},
+          { field: "sPrepareTime", title: "展示时间", width: 150 },
           { field: "sHefuTime", title: "合服时间", width: 150 },
           { field: "sStartTime", title: "开始时间", width: 150},
           { field: "sEndTime", title: "结束时间", width: 150},
