--- a/front/pages/gm/whitelist.html
+++ b/front/pages/gm/whitelist.html
@@ -12,7 +12,7 @@
   <div class="ok-body">
     <form class="layui-form" action="">
       <div class="layui-form-item">
-        <div class="layui-input-block" style="color:#a29bfe">
+        <div class="layui-input-block">
           <br>
           <label>当前白名单列表</label>
           <br>
