--- a/front/pages/game/coin-sub.html
+++ b/front/pages/game/coin-sub.html
@@ -25,6 +25,9 @@
           <input class="layui-input" lay-verify="required" lay-verType="tips" placeholder="截止日期" autocomplete="off" id="endTime" name="endTime">
         </div>
         <div class="layui-input-inline">
+          <input type="checkbox" name="turnMergeZone" lay-skin="tag" title="转到合服后" checked>
+        </div>
+        <div class="layui-input-inline">
           <button class="layui-btn" lay-submit lay-filter="search">
             <i class="layui-icon layui-icon-search"></i>
           </button>
