--- a/front/pages/gm/dir-edit.html
+++ b/front/pages/gm/dir-edit.html
@@ -49,6 +49,7 @@
               <option value="1">正常</option>
               <option value="2">新区</option>
               <option value="3">关闭</option>
+              <option value="4">审核服</option>
             </select>
           </div>
         </div>
