--- a/front/pages/gm/dir.html
+++ b/front/pages/gm/dir.html
@@ -79,6 +79,7 @@
                 case 1: ret = '正常'; break;
                 case 2: ret = '新区'; break;
                 case 3: ret = '<span class="layui-btn layui-btn-danger layui-btn-xs">关闭</span>'; break;
+                case 4: ret = '<span class="layui-btn layui-btn-danger layui-btn-xs">审核服</span>'; break;
                 default:
                   ret = '未知状态';
               }
