--- a/front/pages/gm/clear-loss-server.html
+++ b/front/pages/gm/clear-loss-server.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>自动合服管理</title>
+  <title>清理流失用户管理</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <link rel="stylesheet" href="/css/oksub.css">
   <script type="text/javascript" src="/lib/loading/okLoading.js"></script>
@@ -37,7 +37,7 @@
 
       let dirTable = table.render({
         elem: "#tableId",
-        url: "/api/gm/autoHefuServer/list",
+        url: "/api/gm/clearLossServer/list",
         text: {
           none: '暂无相关数据',
         },
@@ -47,16 +47,15 @@
         cols: [[
           { type: "checkbox", title: "序号"},
           { field: "iId", title: "ID", width: 30},
-          { field: "sSrcZoneIds", title: "合服列表", width: 150},
-          { field: "iMergeToZoneId", title: "目的分区", width: 50},
+          { field: "iFromZoneId", title: "开始分区", width: 50},
+          { field: "iToZoneId", title: "结束分区", width: 50},
           { field: "status", title: "状态", width: 80, templet: function (d) {
               let ret = '';
               switch (d.status) {
                 case 0: ret = '未开始'; break;
                 case 1: ret = '成功'; break;
                 case 2: ret = '<span class="layui-btn layui-btn-danger layui-btn-xs">失败</span>'; break;
-                case 3: ret = '正在展示中'; break;
-                case 4: ret = '合服中'; break;
+                case 3: ret = '删除中'; break;
                 default:
                   ret = '未知状态';
               }
@@ -64,11 +63,10 @@
             }
           },
           { field: "sCreateTime", title: "添加时间", width: 150},
-          { field: "sPrepareTime", title: "展示时间", width: 150 },
-          { field: "sHefuTime", title: "合服时间", width: 150 },
+          { field: "sDeleteTime", title: "删除时间", width: 150 },
           { field: "sStartTime", title: "开始时间", width: 150},
           { field: "sEndTime", title: "结束时间", width: 150},
-          { field: "sResult", title: "合服日志"},
+          { field: "sResult", title: "日志"},
           { title: "操作", width: 80, align: "center", templet: "#operationTpl", width: 70, fixed: 'right' }
         ]],
         parseData: function (res) {
@@ -84,9 +82,6 @@
           case "add":
             add();
             break;
-          case "batchDel":
-            batchDel();
-            break;
         }
       });
 
@@ -97,59 +92,31 @@
             zonedata = data;
             edit(data.id);
             break;
-          case "del":
-            del(data.id);
-            break;
         }
       });
 
       function add() {
-        okLayer.open("添加合服计划", "auto-hefu-server-add.html", "90%", "90%", null, function () {
+        okLayer.open("添加清理计划", "clear-loss-server-add.html", "90%", "90%", null, function () {
           dirTable.reload();
         })
-      }
-
-      function batchDel() {
-        okLayer.confirm("确定要批量删除吗？", function (index) {
-          layer.close(index);
-          let idsStr = okUtils.tableBatchCheck(table);
-          if (idsStr) {
-            okUtils.ajax("/api/gm/autoHefuServer/del", "post", { idsStr: idsStr }, true).done(function (response) {
-              okUtils.tableSuccessMsg(response.data);
-            }).fail(function (error) {
-              console.log(error)
-            });
-          }
-        });
       }
 
       function edit(id) {
-        okLayer.open("编辑服务器", "auto-hefu-server-edit.html", "90%", "90%", null, function () {
+        okLayer.open("编辑服务器", "clear-loss-server-edit.html", "90%", "90%", null, function () {
           dirTable.reload();
         })
       }
 
-      function del(id) {
-        okLayer.confirm("确定要删除吗？", function () {
-          okUtils.ajax("/api/gm/autoHefuServer/del", "post", { idsStr: id }, true).done(function (response) {
-            okUtils.tableSuccessMsg(response.data);
-          }).fail(function (error) {
-            console.log(error)
-          });
-        })
-      }
     })
   </script>
   <!-- 头工具栏模板 -->
 <script type="text/html" id="toolbarTpl">
   <div class="layui-btn-container">
     <div class="layui-inline" lay-event="add"><i class="layui-icon layui-icon-add-1"></i></div>
-    <div class="layui-inline" lay-event="batchDel"><i class="layui-icon layui-icon-delete"></i></div>
   </div>
 </script>
 <script type="text/html" id="operationTpl">
   <a href="javascript:" title="编辑" lay-event="edit"><i class="layui-icon">&#xe642;</i></a>
-  <a href="javascript:" title="删除" lay-event="del"><i class="layui-icon">&#xe640;</i></a>
 </script>
 </body>
 
