--- a/front/pages/gm/gm.html
+++ b/front/pages/gm/gm.html
@@ -95,18 +95,21 @@
         },
       });
 
-      okUtils.ajax("/api/gm/zone/simplelist", "get", {game: true}, false).done(function (response) {
-        let zoneid = 0;
-        if (response.data["game"] != null) {
-          zoneid = response.data["game"][0].iZoneId;
-        }
+      okUtils.ajax("/api/gm/zone/simplelist", "get", {game: true, cross : true}, false).done(function (response) {
+
         zoneSelect.update({
-          data: response.data["game"],
-          initValue: [zoneid],
+          data: [
+            { sZoneName: '游戏服务器', children: response.data["game"] },
+            { sZoneName: '跨服服务器', children: response.data["cross"] },
+          ],
+          initValue: 0,
         });
         zoneSelect2.update({
-          data: response.data["game"],
-          initValue: [zoneid],
+          data: [
+            { sZoneName: '游戏服务器', children: response.data["game"] },
+            { sZoneName: '跨服服务器', children: response.data["cross"] },
+          ],
+          initValue: 0,
         });
       }).fail(function (error) {
         console.log(error);
