--- a/front/pages/gm/auto-hefu-server-add.html
+++ b/front/pages/gm/auto-hefu-server-add.html
@@ -37,6 +37,16 @@
 			</div>
 		</div>
 
+		<div class="layui-form-item">
+			<label class="layui-form-label">重置跨服</label>
+			<div class="layui-input-inline">
+				<select name="bClearCross">
+					<option value="0" selected>否</option>
+					<option value="1">是</option>
+				</select>
+			</div>
+		</div>
+
 		<div class="layui-input-block">
 			<button class="layui-btn" lay-submit lay-filter="add">添加</button>
 		</div>
