--- a/front/pages/game/role.html
+++ b/front/pages/game/role.html
@@ -87,6 +87,7 @@
         {field: "actorid", title: "actorid"},
         {field: "name", title: "角色名称"},
         {field: "vip_level", title: "vip等级", sort: true},
+        {field: "guild_id", title: "工会ID"},
         {field: "last_login_time", title: "最后登录时间"},
         {field: "reg_time", title: "注册时间"},
         {title: "操作", width: 200, align: "center", templet: "#operationTpl", fixed: 'right'}
