--- a/front/pages/gm/bulletin.html
+++ b/front/pages/gm/bulletin.html
@@ -59,6 +59,7 @@
               return ret;
             }
           },
+          { field: "sVersion", title: "版本号", align: "center" },
           { title: "操作", align: "center", templet: "#operationTpl", fixed: 'right' }
         ]],
         parseData: function (res) {
